--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,31 @@
 body {
   font-family: 'Muli';
-  background-color: #D7F6F6;
 
 ;
   font-size: 20px;
   text-decoration: none;
 }
 
+#home-banner{
+  background-image:url(02B4FE8E-AF2E-4FE9-BE69-EB14EB9088C9.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+
+
 h1{
   color: #FF6666;
-  font-family: 'Cormorant Unicase', serif;
+  font-family: 'Zilla Slab', serif;
   font-size: 50px;
   text-align: center;
   text-decoration: underline;
 }
 h2{
   color:#39A3B7;
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Zilla Slab', serif;
   font-size: 30px;
   text-align: center;
 }
