--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@ body {
   size: cover;
   position: center;
   margin: auto;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
 .mySlides {
@@ -52,7 +57,6 @@ body {
   bottom: 8px;
   width: 100%;
   text-align: center;
-  margin-top: 100px;
 }
 
 /* Number text (1/3 etc) */
