--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 125vh;
 }
 
 .mySlides {
@@ -169,8 +169,8 @@ a:hover {
   float:left;
   overflow: hidden;
   padding: 20px;
-  padding-left: 65px;
-  padding-right: 65px;
+  padding-left: 125x;
+  padding-right: 125px;
   border-top: : 100px;
   border-top-color: #667886;
   border-top-style: double;
@@ -179,7 +179,7 @@ a:hover {
   border-bottom-style: double;
   background-color: #93ACC0;
   max-width: 150px;
-  margin: 5px;
+  margin: 25px;
   font-size: 20;
   margin-top: 1;
 
